# rush-cache-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  docker-compose.yml  otel-collector-config.yaml
.github/workflows/: build-binaries.yml  build.yml  ci.yml  release.yml
action/: main.mjs  post.mjs  util.mjs
docs/superpowers/specs/: 2026-04-06-rush-cache-server-design.md
src/: app_settings.rs  main.rs  startup.rs  storage.rs  telemetry.rs
src/auth/: bearer_token.rs
src/routes/: artifacts.rs  health_check.rs  mod.rs
tests/e2e/: artifacts.rs  auth.rs  health_check.rs  helpers.rs
