[package]
name = "rush-cache-server"
version = "0.1.0"
edition = "2024"
authors = ["Bruno Paulino"]
license = "MIT"
rust-version = "1.94"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tracing-actix-web = "0.7"
opentelemetry = { version = "0.29", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "metrics"] }
tracing-opentelemetry = "0.30"
tonic = "0.12"
sysinfo = "0.33"
futures = "0.3"
bytes = "1"
http = "1"
dotenv = "0.15"

[dev-dependencies]
pretty_assertions = "1"
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
